--- a/index.html
+++ b/index.html
@@ -701,13 +701,13 @@
                 <hr>
                 <div class="footer__inner">
                     <div class="inner__item">
-                        Made by ProSiteDeveloper
+                        Made by prositedeveloper
                     </div>
                     <div class="inner__item">
                         Все права защищены
                     </div>
                     <div class="inner__item">
-                        Copyright 2022
+                        Copyright 2025
                     </div>
                 </div>
 
